layout and setup

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,21 +9,21 @@ import { Icon } from "astro-icon/components";
   &copy; {today.getFullYear()} Your name here. All rights reserved.
   <div class="flex items-center gap-6 text-5xl">
     <a
-      href="https://jramma.com"
+      href="https://amitch.site"
       target="_blank"
       class="py-1 pl-3 rounded-md border-1 border-black bg-ppink shadow-card hover:shadow-hover transition"
     >
       <Icon name="web" />
     </a>
     <a
-      href="https://github.com/jramma"
+      href="https://github.com/toxac"
       target="_blank"
       class="border-1 p-1 border-black rounded-full bg-pblue shadow-card hover:shadow-hover transition"
     >
       <Icon name="github" />
     </a>
     <a
-      href="https://www.linkedin.com/in/jramma/"
+      href="https://www.linkedin.com/in/amitchanchal/"
       target="_blank"
       class="border-1 p-1 border-black rounded-full bg-pgreen shadow-card hover:shadow-hover transition"
     >
