--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -37,12 +37,12 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
         <div
           class="absolute -top-8 -left-12 text-5xl bg-ppink px-5 py-1 z-10 shadow-card group-hover:shadow-hover transition rounded-t-2xl border-3 border-black rounded-bl-2xl rounded-br-sm"
         >
-          <Icon name="paint" />
+          <Icon name="solar:laptop-line-duotone" />
         </div>
         <div
           class="absolute top-16 -right-16 text-5xl bg-pyellow p-2 z-10 shadow-card group-hover:shadow-hover transition rounded-full border-3 border-black"
         >
-          <Icon name="beach" />
+          <Icon name="solar:test-tube-bold" />
         </div>
         <div
           class="absolute text-nowrap flex items-center gap-4 -bottom-12 right-0 pr-4 bg-pgreen pl-1 z-10 shadow-card1 group-hover:shadow-card transition rounded-full border-3 border-black"
