--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -28,11 +28,12 @@ const bgClasses = [
   "hover:shadow-pyellow",
 
 ];
+/*
 import type { ImageMetadata } from 'astro';
 import { Image } from 'astro:assets';
 const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/*.{jpeg,jpg,png,gif}')
 if (!images[heroImage]) throw new Error(`"${heroImage}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`);
-
+*/
 const getRandomClass = () => {
   return bgClasses[Math.floor(Math.random() * bgClasses.length)];
 };
@@ -56,7 +57,7 @@ const getRandomClass = () => {
             </h1>
             <p  set:html={description} />
           </div>
-          <Image src={images[heroImage]()}  alt={title} class="h-96 w-full object-cover"/>
+          {/*<Image src={images[heroImage]()}  alt={title} class="h-96 w-full object-cover"/>*/}
         </div>
         <div class="text-black px-6 md:px-0">
           <div class="">
@@ -99,7 +100,7 @@ const getRandomClass = () => {
               <p>Written by</p>
               <div class="flex -mt-4 gap-2">
                   <div class="bg-pgreen rounded-full w-12 h-12 aspect-square object-contain overflow-hidden ">
-                    <Image src={images["/src/assets/hero.png"]()} alt="Fran" />
+                    {/*<Image src={images["/src/assets/hero.png"]()} alt="Fran" />*/}
                   </div>
                   <div>
                   <h3>Joaquín Sorolla</h3>
