--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import "../styles/hamburgers.css";
   >
     <a class="flex items-center gap-2" href="/">
       <p
-        class="text-emerald-500 text-4xl md:text-5xl font-semibold tracking-tighter"
+        class="text-slate-800 text-4xl md:text-5xl font-semibold underline decoration-pgreen tracking-tighter"
       >
         ac
       </p>
