--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,11 +8,11 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 
 <section class="py-20 flex md:flex-row flex-col px-4 md:px-0 gap-10 md:gap-0">
   <div class="flex flex-col gap-6 justify-start items-start md:w-1/2">
-    <h1 class="text-pblack">Hi, my name is Joaquín Sorolla</h1>
-    <p class="text-6xl font-bold">Duels with the sun are fewer.</p>
+    <h1 class="text-pblack">almost random</h1>
+    <p class="text-6xl font-bold">foundations settle, towers rise</p>
     <p>
-      I am Joaquín Sorolla y Bastida, a Spanish painter. A prolific artist, I
-      left behind more than 2,200 cataloged works.
+      Collection of my musings, experiments in market, insights from ventures,
+      and "recipes" from my builds.
     </p>
     <a
       rel="noopener noreferrer"
@@ -26,38 +26,32 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
   <div
     class="md:w-1/2 object-contain flex items-center justify-center p-10 group"
   >
-    <a
-      rel="noopener noreferrer"
-      href="https://es.wikipedia.org/wiki/Joaqu%C3%ADn_Sorolla"
-      target="_blank"
+    <div
+      class="bg-pblue border-3 border-black rounded-2xl h-52 w-60 shadow-card group-hover:shadow-hover flex transition relative"
     >
       <div
-        class="bg-pblue border-3 border-black rounded-2xl h-52 w-60 shadow-card group-hover:shadow-hover flex transition relative"
+        class="absolute -top-8 -left-12 text-5xl bg-ppink px-5 py-1 z-10 shadow-card group-hover:shadow-hover transition rounded-t-2xl border-3 border-black rounded-bl-2xl rounded-br-sm"
       >
-        <div
-          class="absolute -top-8 -left-12 text-5xl bg-ppink px-5 py-1 z-10 shadow-card group-hover:shadow-hover transition rounded-t-2xl border-3 border-black rounded-bl-2xl rounded-br-sm"
-        >
-          <Icon name="solar:laptop-line-duotone" />
-        </div>
-        <div
-          class="absolute top-16 -right-16 text-5xl bg-pyellow p-2 z-10 shadow-card group-hover:shadow-hover transition rounded-full border-3 border-black"
-        >
-          <Icon name="solar:test-tube-bold" />
-        </div>
-        <div
-          class="absolute text-nowrap flex items-center gap-4 -bottom-12 right-0 pr-4 bg-pgreen pl-1 z-10 shadow-card1 group-hover:shadow-card transition rounded-full border-3 border-black"
-        >
-          <Icon name="beach" />
-          <p>Joaquín Sorolla</p>
-        </div>
-        <div class="h-80 w-60 overflow-hidden relative -mt-30 rounded-2xl">
-          <Image
-            class="object-bottom absolute bottom-0 group-hover:scale-105 transition"
-            src={images["/src/assets/hero.png"]()}
-            alt="Sorolla, photo wiki"
-          />
-        </div>
-      </div></a
-    >
+        <Icon name="solar:laptop-line-duotone" />
+      </div>
+      <div
+        class="absolute top-16 -right-16 text-5xl bg-pyellow p-2 z-10 shadow-card group-hover:shadow-hover transition rounded-full border-3 border-black"
+      >
+        <Icon name="solar:test-tube-bold" />
+      </div>
+      <div
+        class="absolute text-nowrap flex items-center gap-4 -bottom-12 right-0 pr-4 bg-pgreen pl-1 z-10 shadow-card1 group-hover:shadow-card transition rounded-full border-3 border-black"
+      >
+        <Icon name="solar:bolt-circle-bold" />
+        <p>ac</p>
+      </div>
+      <div class="h-80 w-60 overflow-hidden relative -mt-30 rounded-2xl">
+        <Image
+          class="object-bottom absolute bottom-0 group-hover:scale-105 transition"
+          src={images["/src/assets/hero.png"]()}
+          alt="Sorolla, photo wiki"
+        />
+      </div>
+    </div>
   </div>
 </section>
