--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,11 +6,13 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 );
 ---
 
-<section class="py-20 flex md:flex-row flex-col px-4 md:px-0 gap-10 md:gap-0">
-  <div class="flex flex-col gap-6 justify-start items-start md:w-1/2">
-    <h1 class="text-pblack">almost random</h1>
-    <p class="text-6xl font-bold">foundations settle, towers rise</p>
-    <p>
+<section class="px-10 pt-12 pb-20 grid grid-cols-1 lg:grid-cols-2 gap-10">
+  <div class="flex flex-col order-2 lg:order-1">
+    <h1 class="text-pblack">&#129512; almost random</h1>
+    <p class="text-4xl lg:text-6xl font-bold">
+      foundations settle, towers rise
+    </p>
+    <p class="mb-6">
       Collection of my musings, experiments in market, insights from ventures,
       and "recipes" from my builds.
     </p>
@@ -18,14 +20,12 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
       rel="noopener noreferrer"
       href="https://jramma.com"
       target="_blank"
-      class="bg-pgreen px-5 py-3 border-1 border-black rounded-lg shadow-card hover:shadow-hover transition"
+      class="bg-pgreen px-5 py-3 border-1 border-black rounded-lg shadow-card hover:shadow-hover transition w-48 text-center"
     >
       Work together
     </a>
   </div>
-  <div
-    class="md:w-1/2 object-contain flex items-center justify-center p-10 group"
-  >
+  <div class="flex items-center justify-center p-10 group order-1 lg:order-2">
     <div
       class="bg-pblue border-3 border-black rounded-2xl h-52 w-60 shadow-card group-hover:shadow-hover flex transition relative"
     >
