--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,7 +26,6 @@ const bgClasses = [
   "hover:shadow-pgreenHover",
   "hover:shadow-pblueHover",
   "hover:shadow-pyellow",
-
 ];
 /*
 import type { ImageMetadata } from 'astro';
@@ -46,7 +45,7 @@ const getRandomClass = () => {
   <body>
     <Header />
     <main class="container mx-auto md:px-10 text-white">
-      <article >
+      <article>
         <div class="relative mb-20" transition:animate="fade">
           <span class="bg-black bg-opacity-25 w-full h-full absolute"></span>
           <div class="absolute bottom-10 md:left-20 left-6">
@@ -55,9 +54,11 @@ const getRandomClass = () => {
                 title.slice(1)
               }
             </h1>
-            <p  set:html={description} />
+            <p set:html={description} />
           </div>
-          {/*<Image src={images[heroImage]()}  alt={title} class="h-96 w-full object-cover"/>*/}
+          {
+            /*<Image src={images[heroImage]()}  alt={title} class="h-96 w-full object-cover"/>*/
+          }
         </div>
         <div class="text-black px-6 md:px-0">
           <div class="">
@@ -80,16 +81,16 @@ const getRandomClass = () => {
               <slot />
             </div>
             <div class="flex flex-col gap-6" transition:animate="slide">
-              <ul class="flex flex-col gap-2 pt-10 md:pt-0 items-start md:items-end">
+              <ul
+                class="flex flex-col gap-2 pt-10 md:pt-0 items-start md:items-end"
+              >
                 <p class="md:hidden font-semibold">Related:</p>
                 {
                   posts.map((post) => {
                     return (
-                      <li class=`text-left rounded-lg border-1 border-black shadow-card group hover:shadow-hover transition  px-2 py-2 ${getRandomClass()}` >
-                        <a
-                          href={`/blog/${post.id}/`}
-                        >
-                          <h4 >{post.data.title}</h4>
+                      <li class="text-left rounded-lg border-1 border-black shadow-card group hover:shadow-hover transition  px-2 py-2">
+                        <a href={`/blog/${post.id}/`}>
+                          <h4>{post.data.title}</h4>
                         </a>
                       </li>
                     );
@@ -99,15 +100,19 @@ const getRandomClass = () => {
               <hr />
               <p>Written by</p>
               <div class="flex -mt-4 gap-2">
-                  <div class="bg-pgreen rounded-full w-12 h-12 aspect-square object-contain overflow-hidden ">
-                    {/*<Image src={images["/src/assets/hero.png"]()} alt="Fran" />*/}
-                  </div>
-                  <div>
-                  <h3>Joaquín Sorolla</h3>
-                  <p class="text-pblack">UX UI designer based<br>in Steve Jobs</p>
+                <div
+                  class="bg-pgreen rounded-full w-12 h-12 aspect-square object-contain overflow-hidden"
+                >
+                  <img src="/images/hero.png" alt="Fran" />
+                </div>
+                <div>
+                  <h3>ac/toxac</h3>
+                  <p class="text-pblack">
+                    UX UI designer based<br />in Steve Jobs
+                  </p>
                 </div>
               </div>
-              <hr/>
+              <hr />
               <div>
                 <p>Contributors:</p>
                 <div class="flex items-center gap-6 text-xl">
