--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,30 +4,17 @@ import { Icon } from "astro-icon/components";
 ---
 
 <footer
-  class="flex flex-col items-center container mx-auto p-10 text-center gap-10 pb-40"
+  class="flex flex-col items-center container mx-auto p-10 text-center pb-20"
 >
-  &copy; {today.getFullYear()} Your name here. All rights reserved.
-  <div class="flex items-center gap-6 text-5xl">
-    <a
-      href="https://amitch.site"
-      target="_blank"
-      class="py-1 pl-3 rounded-md border-1 border-black bg-ppink shadow-card hover:shadow-hover transition"
-    >
-      <Icon name="web" />
+  <p class="text-md font-normal">
+    &copy; {today.getFullYear()} @toxac. All rights reserved.
+  </p>
+  <div class="flex items-center gap-6 text-lg">
+    <a href="https://github.com/toxac" target="_blank">
+      <p class="text-pblue">Github</p>
     </a>
-    <a
-      href="https://github.com/toxac"
-      target="_blank"
-      class="border-1 p-1 border-black rounded-full bg-pblue shadow-card hover:shadow-hover transition"
-    >
-      <Icon name="github" />
-    </a>
-    <a
-      href="https://www.linkedin.com/in/amitchanchal/"
-      target="_blank"
-      class="border-1 p-1 border-black rounded-full bg-pgreen shadow-card hover:shadow-hover transition"
-    >
-      <Icon name="linkedin" />
+    <a href="https://www.linkedin.com/in/amitchanchal/" target="_blank">
+      <p class="text-pblue">LinkedIn</p>
     </a>
   </div>
 </footer>
