--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,9 +15,9 @@ import "../styles/hamburgers.css";
       </p>
     </a>
     <ul class="items-center md:gap-8 text-nowrap hidden md:flex">
-      <li><Link href="/" text="Home" style="primary" /></li>
-      <li><Link href="/about" text="What I do" style="secondary" /></li>
-      <li><Link href="/blog" text="My work" style="tertiary" /></li>
+      <li><Link href="/" text="home" style="primary" /></li>
+      <li><Link href="/projects" text="my work" style="secondary" /></li>
+      <li><Link href="/posts" text="posts" style="tertiary" /></li>
     </ul>
     <div class="md:hidden z-40">
       <button class="hamburger hamburger--elastic" type="button">
@@ -33,9 +33,9 @@ import "../styles/hamburgers.css";
         <ul
           class="flex flex-col items-center justify-center h-full gap-8 text-nowrap"
         >
-          <li><Link href="/" text="Home" style="primary" /></li>
-          <li><Link href="/about" text="What I do" style="secondary" /></li>
-          <li><Link href="/blog" text="My work" style="tertiary" /></li>
+          <li><Link href="/" text="home" style="primary" /></li>
+          <li><Link href="/projects" text="my work" style="secondary" /></li>
+          <li><Link href="/posts" text="posts" style="tertiary" /></li>
         </ul>
       </div>
     </div>
