--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import WhatIDo from "@/components/WhatIDo.astro";
   </head>
   <body class="p-0 m-0 max-w-screen">
     <Header />
-    <main class="container mx-auto md:px-10">
+    <main class="container mx-auto px-5 md:px-10">
       <Hero />
       <WhatIDo />
     </main>
