--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import "../styles/hamburgers.css";
 
 <header>
   <nav
-    class="flex container mx-auto md:p-10 px-4 py-6 items-center justify-between"
+    class="flex container mx-auto md:px-10 px-4 py-6 items-center justify-between"
   >
     <a class="flex items-center gap-2" href="/">
       <p
